 - Adriaan de Groot
 - Anke Boersma
 - Evan James
 - Jeremy Attall
 - Johannes Kamprad
 - Shivanand
 - Peter Jung

## Core ##
 - Incompatible module-configuration changes, see #1438.
 - Branding entries use ${var} instead of @{var} for substitutions,
   in line with all the other substitution mechanisms used from C++
   core. See documentation in `branding.desc`.
 - Boost::Python requires at least version 1.72
 - KDE Frameworks must be version 5.58 or later

## Modules ##
 - *dracut* added a configurable kernel name. (thanks Anke)
 - *initcpiocfg* orders hookds slightly differently. (thanks Peter)
 - *localeq* moved to using Drawer instead of ComboBox in UI. (thanks Anke)
 - *keyboardq* moved to using Drawer instead of ComboBox in UI. (thanks Anke)
 - *netinstall* now has a new *noncheckable* option for groups, which prevent
   it a group from being checked/uncheckd as a whole. You can still check
   individual items **in** the group though. (thanks Shivanand)
 - *partition* can now pick LUKS or LUKS2. (thanks Jeremy)
 - *zfs* creates a hostid through zgenhostid.
 - *zfshostid* new module to copy zfs generated /etc/hostid


# 3.3.0-alpha2 (2022-08-23)

Second alpha release, with updated ABI compatibility checking,
some 3.3.0 release goals, new features in modules and important bugfixes.

This release contains contributions from (alphabetically by first name):
 - Adriaan de Groot
 - Anke Boersma
 - Evan James
 - Shivanand
 - Vitor Lopes

## Core ##

A core **TODO** is moving all library code into the `Calamares` namespace,
dropping the `CalamaresUtils` namespace. Modern C++ supports nested namespaces,
so in some cases we can use those. This has a drastic effect on ABI compatibility,
though, as functions move from one namespace to another. This needs to be
completed before a 3.3.0 with ABI stability is released.

## Modules ##

Module schemas have been updated to reflect all the incompatible changes.


# 3.3.0-alpha1 (2022-06-27)
